--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
 <div class="row main-icons-row">
 	<div class="span3">
-		<img src="inc/glyphicons/glyphicons_201_upload.png" class="main-icons"/><h2 class="main-icons-header">WP Posts Multi</h2>
+		<img src="inc/glyphicons/glyphicons_030_pencil.png" class="main-icons"/><h2 class="main-icons-header">WP Posts Multi</h2>
 		<p>Display a multi select drop down list of WP posts.</p>
 	</div>
 	<div class="span3">
@@ -443,71 +443,78 @@
 <p class="h-byline">The NHP Theme Options Framework has many built in validation classes, which include...</p>
 </div>
 <div class="row">
-	<div class="span3">
+	<div class="span4">
 		<img src="inc/glyphicons/glyphicons_329_e-mail.png" class="main-icons"/><h2 class="main-icons-header">Email</h2>
 		<p>Makes sure the users inputs a valid email address.</p>
 	</div>
-	<div class="span3">
+	<div class="span4">
 		<img src="inc/glyphicons/glyphicons_152_new_window.png" class="main-icons"/><h2 class="main-icons-header">URL</h2>
 		<p>Checks the submitted value is a URL.</p>
 	</div>
-	<div class="span3">
+	<div class="span4">
 		<img src="inc/glyphicons/glyphicons_194_circle_question_mark.png" class="main-icons" /><h2 class="main-icons-header">Numeric</h2>
 		<p>Makes sure the value and makes sure it is numerical.</p>
 	</div>
-	<div class="span3">
+</div>
+
+<div class="row main-icons-row">
+	<div class="span4">
 		<img src="inc/glyphicons/glyphicons_191_circle_minus.png" class="main-icons"/><h2 class="main-icons-header">Comma Seperated Numeric</h2>
 		<p>Only allows numeric values seperated by comma's.</p>
 	</div>
-</div>
-
-<div class="row main-icons-row">
-	<div class="span3">
-		<img src="inc/glyphicons/glyphicons_118_embed_close.png" class="main-icons"/><h2 class="main-icons-header">Escape JS</h2>
-		<p>Escape Javascript Code input.</p>
-	</div>
-	<div class="span3">
+	<div class="span4">
 		<img src="inc/glyphicons/glyphicons_118_embed_close.png" class="main-icons"/><h2 class="main-icons-header">HTML</h2>
 		<p>Filter and clean HTML input just like WordPress does.</p>
 	</div>
-	<div class="span3">
+	<div class="span4">
 		<img src="inc/glyphicons/glyphicons_117_embed.png" class="main-icons" /><h2 class="main-icons-header">HTML Custom</h2>
 		<p>Filter and clean HTML with custom defined rules.</p>
 	</div>
-	<div class="span3">
-		<img src="inc/glyphicons/glyphicons_199_ban.png" class="main-icons"/><h2 class="main-icons-header">No HTML</h2>
-		<p>Strip HTML content from a string.</p>
-	</div>
 </div>
 
 <div class="row main-icons-row">
-	<div class="span3">
+	<div class="span4">
+		<img src="inc/glyphicons/glyphicons_199_ban.png" class="main-icons"/><h2 class="main-icons-header">No HTML</h2>
+		<p>Strip HTML content from a string.</p>
+	</div>
+	<div class="span4">
 		<img src="inc/glyphicons/glyphicons_248_asterisk.png" class="main-icons"/><h2 class="main-icons-header">No Special Characters</h2>
 		<p>Filter and remove any Special Charaters.</p>
 	</div>
-	<div class="span3">
+	<div class="span4">
 		<img src="inc/glyphicons/glyphicons_042_pie_chart.png" class="main-icons"/><h2 class="main-icons-header">Color</h2>
 		<p>Check for a valid HTML hex value.</p>
-	</div>
-	<div class="span3">
-		<img src="inc/glyphicons/glyphicons_045_calendar.png" class="main-icons" /><h2 class="main-icons-header">Date</h2>
-		<p>Check for a valid date input.</p>
-	</div>
-	<div class="span3">
-		<img src="inc/glyphicons/glyphicons_199_ban.png" class="main-icons"/><h2 class="main-icons-header">No HTML</h2>
-		<p>Strip HTML content from a string.</p>
 	</div>
 </div>
 
 
 <div class="row main-icons-row">
-	<div class="span3 offset3">
+	<div class="span4">
+		<img src="inc/glyphicons/glyphicons_045_calendar.png" class="main-icons" /><h2 class="main-icons-header">Date</h2>
+		<p>Check for a valid date input.</p>
+	</div>
+	<div class="span4">
 		<img src="inc/glyphicons/glyphicons_214_resize_small.png" class="main-icons"/><h2 class="main-icons-header">Str Replace</h2>
 		<p>Programatically replace elements of the value.</p>
 	</div>
-	<div class="span3">
+	<div class="span4">
 		<img src="inc/glyphicons/glyphicons_215_resize_full.png" class="main-icons"/><h2 class="main-icons-header">Preg Replace</h2>
 		<p>Programatically replace elements of the value.</p>
+	</div>
+</div>
+
+<div class="row main-icons-row">
+	<div class="span4">
+		<img src="inc/glyphicons/glyphicons_194_circle_question_mark.png" class="main-icons"/><h2 class="main-icons-header">???</h2>
+		<p>More soon.</p>
+	</div>
+	<div class="span4">
+		<img src="inc/glyphicons/glyphicons_118_embed_close.png" class="main-icons"/><h2 class="main-icons-header">Escape JS</h2>
+		<p>Escape Javascript Code input.</p>
+	</div>
+	<div class="span4">
+		<img src="inc/glyphicons/glyphicons_194_circle_question_mark.png" class="main-icons"/><h2 class="main-icons-header">???</h2>
+		<p>More soon.</p>
 	</div>
 </div>
 
