fixed margin-top issue on one icon and fixed grammar issue with one validation description

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
 	</div>
 	<div class="span4">
 		<img src="inc/glyphicons/glyphicons_194_circle_question_mark.png" class="main-icons" /><h2 class="main-icons-header">Numeric</h2>
-		<p>Makes sure the value and makes sure it is numerical.</p>
+		<p>Makes sure the value is numerical.</p>
 	</div>
 </div>
 
@@ -463,11 +463,11 @@
 		<p>Only allows numeric values seperated by comma's.</p>
 	</div>
 	<div class="span4">
-		<img src="inc/glyphicons/glyphicons_118_embed_close.png" class="main-icons"/><h2 class="main-icons-header">HTML</h2>
+		<img src="inc/glyphicons/glyphicons_118_embed_close.png" class="main-icons" /><h2 class="main-icons-header">HTML</h2>
 		<p>Filter and clean HTML input just like WordPress does.</p>
 	</div>
 	<div class="span4">
-		<img src="inc/glyphicons/glyphicons_117_embed.png" class="main-icons" /><h2 class="main-icons-header">HTML Custom</h2>
+		<img src="inc/glyphicons/glyphicons_117_embed.png" class="main-icons" style="margin-top:10px;"/><h2 class="main-icons-header">HTML Custom</h2>
 		<p>Filter and clean HTML with custom defined rules.</p>
 	</div>
 </div>
