Changed version on button link and added "warnings" feature.

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 </div>
 <div class="span3 download-info">
 	<a href="https://github.com/leemason/NHP-Theme-Options-Framework" class="btn btn-info btn-large">View project on GitHub</a>
-	<a href="https://github.com/leemason/NHP-Theme-Options-Framework/zipball/master" class="btn btn-large">Download Framework <small>(v1.0.2)</small></a>
+	<a href="https://github.com/leemason/NHP-Theme-Options-Framework/zipball/master" class="btn btn-large">Download Framework <small>(v1.0.3)</small></a>
 </div>    
     
 </nav>
@@ -218,8 +218,8 @@
 
 <div class="row main-icons-row">
 	<div class="span4">
-		<img src="inc/glyphicons/glyphicons_196_circle_exclamation_mark.png" class="main-icons"/><h2 class="main-icons-header">Custom Error Handling</h2>
-		<p>Using the Validation methods you can create custom error messages for each field type.</p>
+		<img src="inc/glyphicons/glyphicons_196_circle_exclamation_mark.png" class="main-icons"/><h2 class="main-icons-header">Custom Error/Warning Handling</h2>
+		<p>Using the Validation methods you can create custom errorand warning messages for each field type.</p>
 	</div>
 	<div class="span4">
 		<img src="inc/glyphicons/glyphicons_023_cogwheels.png" class="main-icons"/><h2 class="main-icons-header">Multiple Option Sections</h2>
