updated framework site for v1.0.5

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 </div>
 <div class="span3 download-info">
 	<a href="https://github.com/leemason/NHP-Theme-Options-Framework" class="btn btn-info btn-large">View project on GitHub</a>
-	<a href="https://github.com/leemason/NHP-Theme-Options-Framework/zipball/master" class="btn btn-large">Download Framework <small>(v1.0.4)</small></a>
+	<a href="https://github.com/leemason/NHP-Theme-Options-Framework/zipball/master" class="btn btn-large">Download Framework <small>(v1.0.5)</small></a>
 </div>    
     
 </nav>
@@ -144,8 +144,8 @@
 		<p>Have as many, or as little sections as you need.</p>
 	</div>
 	<div class="span4">
-		<img src="inc/glyphicons/glyphicons_195_circle_info.png" class="main-icons"/><h2 class="main-icons-header">Theme Info Section</h2>
-		<p>Want to show the theme info in your options? Its there by default! Or you can remove it, its all optional.</p>
+		<img src="inc/glyphicons/glyphicons_195_circle_info.png" class="main-icons"/><h2 class="main-icons-header">Custom Tab Sections</h2>
+		<p>Want to show additional info in your options panrl? Its there for you to use and abuse.</p>
 	</div>
 </div>
 
@@ -196,7 +196,7 @@
 		<a class="thumbnail fancybox" rel="gallery" href="inc/shots/7-NHP-Docs.png" title="Framework Docs"><img alt="" src="inc/shots/thumbs/7-NHP-Docs.png"></a>
 	</li>
 	<li class="span2">
-		<a class="thumbnail fancybox" rel="gallery" href="inc/shots/8-NHP-Theme-Info.png" title="Framework Theme Info Section"><img alt="" src="inc/shots/thumbs/8-NHP-Theme-Info.png"></a>
+		<a class="thumbnail fancybox" rel="gallery" href="inc/shots/8-NHP-Theme-Info.png" title="Framework Custom Tab Section"><img alt="" src="inc/shots/thumbs/8-NHP-Theme-Info.png"></a>
 	</li>
 	<li class="span2">
 		<a class="thumbnail fancybox" rel="gallery" href="inc/shots/9-NHP-Dev-Mode.png" title="Framework Dev Mode Section"><img alt="" src="inc/shots/thumbs/9-NHP-Dev-Mode.png"></a>
@@ -353,6 +353,18 @@
 </div>
 
 
+<div class="row main-icons-row">
+	<div class="span3 offset3">
+		<img src="inc/glyphicons/glyphicons_042_pie_chart.png" class="main-icons"/><h2 class="main-icons-header">Color Gradient</h2>
+		<p>Allow the user to select start and finish colors using the farbtastic color picker.</p>
+	</div>
+	<div class="span3">
+		<img src="inc/glyphicons/glyphicons_281_bullets.png" class="main-icons" style="margin-top:10px;" /><h2 class="main-icons-header">Multi Text Option</h2>
+		<p>Need dynamic text fields? Its easy with the framework.</p>
+	</div>
+</div>
+
+
 
 
 <hr/>
@@ -422,17 +434,9 @@
 </div>
 
 <div class="row main-icons-row">
-	<div class="span4">
-		<img src="inc/glyphicons/glyphicons_194_circle_question_mark.png" class="main-icons"/><h2 class="main-icons-header">???</h2>
-		<p>More soon.</p>
-	</div>
-	<div class="span4">
+	<div class="span4 offset4">
 		<img src="inc/glyphicons/glyphicons_118_embed_close.png" class="main-icons"/><h2 class="main-icons-header">Escape JS</h2>
 		<p>Escape Javascript Code input.</p>
-	</div>
-	<div class="span4">
-		<img src="inc/glyphicons/glyphicons_194_circle_question_mark.png" class="main-icons"/><h2 class="main-icons-header">???</h2>
-		<p>More soon.</p>
 	</div>
 </div>
 
