added google web fonts field type to the splash page.

--- a/index.html
+++ b/index.html
@@ -354,13 +354,17 @@
 
 
 <div class="row main-icons-row">
-	<div class="span3 offset3">
+	<div class="span4">
 		<img src="inc/glyphicons/glyphicons_042_pie_chart.png" class="main-icons"/><h2 class="main-icons-header">Color Gradient</h2>
 		<p>Allow the user to select start and finish colors using the farbtastic color picker.</p>
 	</div>
-	<div class="span3">
+	<div class="span4">
 		<img src="inc/glyphicons/glyphicons_281_bullets.png" class="main-icons" style="margin-top:10px;" /><h2 class="main-icons-header">Multi Text Option</h2>
 		<p>Need dynamic text fields? Its easy with the framework.</p>
+	</div>
+	<div class="span4">
+		<img src="inc/glyphicons/glyphicons_106_text_width.png" class="main-icons"/><h2 class="main-icons-header">Google Fonts Select</h2>
+		<p>want to use a custom font provided by Google Web Fonts? Its easy with the simple dropdown list selction field.</p>
 	</div>
 </div>
 
