--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
 
   <body data-spy="scroll">
-
+<meta http-equiv="refresh" content="0; url=http://reduxframework.com/">
 
   <!-- Navbar
     ================================================== -->
