--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <nav class="row">
 <div class="span12" id="main-heading">
     <h1>NHP has been merged with Redux Framework to provide even better features and more community support.</h1>
-	<h1></h1>Please direct all issues/ requests to The Redux Framework: <a href="http://reduxframework.com">http://reduxframework.com</a></h1>
+	<h1>Please direct all issues/ requests to The Redux Framework: <a href="http://reduxframework.com">http://reduxframework.com</a></h1>
 </div>   
     
 </nav>
