--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <!-- Masthead
 ================================================== -->
 <nav class="row">
-<div class="span12" id="main-heading">
+<div class="span12" id="main-heading" style="text-align:center;">
     <h1>NHP has been merged with Redux Framework to provide even better features and more community support.</h1>
 	<h1>Please direct all issues/ requests to The Redux Framework: <a href="http://reduxframework.com">http://reduxframework.com</a></h1>
 </div>   
