pointing to fluentthemes.com

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 ================================================== -->
 <nav class="row">
 <div class="span12" id="main-heading" style="text-align:center;">
-    <h1>NHP has been merged with Redux Framework to provide even better features and more community support.</h1>
-	<h1>Please direct all issues/ requests to The Redux Framework: <a href="http://reduxframework.com">http://reduxframework.com</a></h1>
+    <h1>NHP has been replaced by the Fluent Framework which is coming very soon.</h1>
+	<h1>Please direct all issues/ requests to The Fluent Framework: <a href="http://fluentthemes.com">http://fluentthemes.com</a></h1>
 </div>   
     
 </nav>
