Update to new urls of Fluent Framework

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <nav class="row">
 <div class="span12" id="main-heading" style="text-align:center;">
     <h1>NHP has been replaced by the Fluent Framework which is coming very soon.</h1>
-	<h1>Please direct all issues/ requests to The Fluent Framework: <a href="http://fluentthemes.com">http://fluentthemes.com</a></h1>
+	<h1>Please direct all issues/ requests to The Fluent Framework: <a href="http://no-half-pixels.github.io/Fluent-Framework/">http://no-half-pixels.github.io/Fluent-Framework/</a></h1>
 </div>   
     
 </nav>
